# vllama

./: .dockerignore  .gitignore  ARCHITECTURE_DECISION.md  BATCHING_INVESTIGATION.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  CLAUDE.md  COMMIT_MESSAGE.txt  COMPREHENSIVE_TEST_RESULTS.md  CONCURRENCY_ISSUE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  ENGINE_COMPARISON.md  FEDORA_SETUP.md  IMPLEMENTATION_PLAN.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_ROADMAP.md  PROJECT_STATUS.md  README.md  SESSION_SUMMARY.md  TESTING_STATUS.md  TEST_RESULTS.md  TEST_STRATEGY.md  TODO.md  docker-compose.yml  test_async_concurrency.sh  test_concurrent.py  test_concurrent.sh  test_scaling.sh
.github/workflows/: ci.yml.disabled
ai/: COMPETITIVE_STRATEGY.md  DECISIONS.md  REALISTIC_NEXT_STEPS.md  RESEARCH.md  STATUS.md  TODO.md
ai/research/: concurrent-performance-test.md  engine-comparison.md  macos-optimization.md  planning-questions.md  vllm-optimization.md
crates/hyperllama-cli/: Cargo.toml
crates/hyperllama-cli/src/: config.rs  main.rs
crates/hyperllama-cli/src/commands/: bench.rs  generate.rs  info.rs  mod.rs  ps.rs  rm.rs  serve.rs
crates/hyperllama-core/: Cargo.toml
crates/hyperllama-core/src/: downloader.rs  error.rs  hardware.rs  lib.rs  request.rs
crates/hyperllama-engine/: Cargo.toml
crates/hyperllama-engine/src/: engine.rs  http_engine.rs  lib.rs  llama_cpp.rs  max.rs  orchestrator.rs  vllm.rs
crates/hyperllama-models/: Cargo.toml
crates/hyperllama-server/: Cargo.toml
crates/hyperllama-server/src/: api.rs  lib.rs  server.rs  state.rs
crates/vllama-cli/: Cargo.toml
crates/vllama-cli/src/: config.rs  error.rs  main.rs  output.rs
crates/vllama-cli/src/commands/: bench.rs  generate.rs  info.rs  list.rs  pull.rs  rm.rs  run.rs  serve.rs  show.rs
crates/vllama-core/: Cargo.toml
crates/vllama-core/src/: downloader.rs  lib.rs  model.rs  openai.rs  request.rs  response.rs  templates.rs  types.rs
crates/vllama-engine/: Cargo.toml
crates/vllama-engine/src/: engine.rs  http_engine.rs  lib.rs  llama_cpp.rs  max.rs  orchestrator.rs  vllm.rs  vllm_openai.rs
crates/vllama-models/: Cargo.toml
crates/vllama-server/: Cargo.toml
crates/vllama-server/src/: api.rs  server.rs  state.rs
crates/vllama-server/tests/: api_tests.rs  performance_tests.rs
deployment/: caddy.conf  nginx.conf  vllama.service
docs/: BENCHMARKS.md  DEPLOYMENT.md  FEDORA_SETUP.md  MODELS.md  MONITORING.md  PERFORMANCE.md  PHASE_0_WEEK_1.md  PHASE_1_REST_API.md  SECURITY.md  TESTING.md  TESTING_DEPLOYMENT.md  hyperlama_tech_stack_summary.md  hyperlama_technical_plan.md
docs/archive/: NEXT_STEPS.md  PHASE_0_COMPLETE.md  PHASE_1_PROGRESS.md  START_HERE.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: vllama-dashboard.json
python/: README.md  pyproject.toml
python/llm_service/: server.py
python/max_service/: server.py
scripts/: check_vram.sh
