[workspace]
resolver = "2"
members = [
    "crates/hyperllama-cli",
    "crates/hyperllama-server",
    "crates/hyperllama-core",
    "crates/hyperllama-engine",
    "crates/hyperllama-models",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["HyperLlama Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nijaru/hyperllama"

[workspace.dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# HTTP client
reqwest = { version = "0.11", features = ["stream", "json"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

# Hardware detection
sysinfo = "0.30"

# Workspace crates
hyperllama-cli = { path = "crates/hyperllama-cli" }
hyperllama-server = { path = "crates/hyperllama-server" }
hyperllama-core = { path = "crates/hyperllama-core" }
hyperllama-engine = { path = "crates/hyperllama-engine" }
hyperllama-models = { path = "crates/hyperllama-models" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
