[package]
name = "hyperllama-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hyperllama"
path = "src/main.rs"

[dependencies]
hyperllama-server = { workspace = true }
hyperllama-core = { workspace = true }
hyperllama-engine = { workspace = true }
hyperllama-models = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
