[package]
name = "vllama-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vllama"
path = "src/main.rs"

[dependencies]
vllama-server = { workspace = true }
vllama-core = { workspace = true }
vllama-engine = { workspace = true }
vllama-models = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
